# mp_codemirror

./: .gitignore  .gitmodules  CDN_TEST_REPORT.md  CONTRIBUTING.md  JESSE_AI_SUCCESS.md  LICENSE  Multi-File Project Support: Implementati.md  PYRIGHT_LSP_PLAN.md  QUICKSTART.md  README.md  SPRINT_2_COMPLETED.md  SPRINT_2_FINAL_SUMMARY.md  TECHNICAL.md  codereview.md  justfile  package-lock.json  package.json  progress.md  pyproject.toml  pyrightconfig.json  tsconfig.json  webpack.config.cjs
.ai_history/: JESSE_AI_SUCCESS.md  JESSE_AI_WINDOWS_ISSUE.md  SOLUTION_SUMMARY.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT_2_COMPLETED.md  SPRINT_2_FINAL_SUMMARY.md  SPRINT_2_PYRIGHT_SERVER.md
.github/: copilot-instructions.md
.github/agents/: squad.agent.md
.github/workflows/: README.md  copilot-setup-steps.yml  deploy.yml  squad-heartbeat.yml  squad-issue-assign.yml  squad-triage.yml  sync-squad-labels.yml  test.yml
.squad/: .ralph-state.json  decisions.md  routing.md  team.md
.squad/agents/basher/: charter.md  history.md
.squad/agents/danny/: charter.md  history.md
.squad/agents/frank/: charter.md  history.md
.squad/agents/linus/: charter.md  history.md
.squad/agents/livingston/: history.md
.squad/agents/ralph/: history.md
.squad/agents/reuben/: charter.md  history.md
.squad/agents/rusty/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/templates/: client-compatibility.md  model-selection.md  ralph-reference.md  reviewer-rejection.md  source-of-truth.md  spawn-template.md  worktree-reference.md
assets/: stubs-manifest.json  time.pyi
docs/: architecture.md  component-reusability-plan.md  contributing.md  quickstart.md  showcase.md  technical.md
docs/Archive/: CDN_TEST_REPORT.md  PYRIGHT_LSP_PLAN.md  SPRINT4_SUMMARY.md  SPRINT_2_PYRIGHT_SERVER.md  codereview.md
scripts/: pack-stubs.mjs  pack-stubs.py  pack-typeshed.mjs  pack-typeshed.py
server/: README.md  lsp_bridge.py
src/: app.js  events.js  index.html  share.js  spike-test.html  styles.css  test.html
src/editor/: document-manager.js
src/examples/: README.md  blink_led.py  cp_digital.py  cp_essentials.py  espnow.py  examples.json  rp2_pio.py  temperature_sensor.py
src/lsp/: client.js  completion-core.mjs  completion.js  diagnostics.js  hover.js  mock-transport.js  simple-client.js  transport-factory.js  websocket-transport.js  worker-transport.js
src/storage/: opfs-project.js
src/tests/: worker-transport-test.html
src/ui/: file-tree.js  tab-bar.js
src/worker/: declarations.d.ts  messages.ts  pyright-worker.ts
tests/: README.md  conftest.py  http_server.py  test_cdn_resources.py  test_completion.unit.mjs  test_completion_source.unit.mjs  test_editor.py  test_f8_diagnostics.py  test_file_tree.py  test_lsp_bridge.py  test_lsp_diagnostics.py  test_lsp_features.py  test_lsp_realtime.py  test_multi_file.py  test_opfs_storage.py  test_pack_stubs.py  test_report_issue.py  test_share.py  test_share_settings.unit.mjs  test_spike_worker.py  test_worker_transport.py  timing.py
(+23 files in other folders)
