[project]
name = "micropython-CodeMirror"
authors = [{ name = "Jos Verlinde", email = "jos_verlinde@hotmail.com"}]

description = "Codemirror + Pyright for MicroPython Demo"
version = "0.1.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: MicroPython",
  "License :: OSI Approved :: MIT License"
]
readme = "readme.md"
license = "MIT"
requires-python = ">=3.10"

[project.optional-dependencies]
# install to folder typings
# uv pip install -r pyproject.toml --extra stubs --target typings 
stubs = [
  "micropython-esp32-stubs"
]
test = [
    "pytest",
    "pytest-playwright",
    "websockets",
    "ruff",
]
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "unit: Pure Python unit tests, no browser (Tier 0)",
    "editor: Editor UI tests, needs HTTP + CDN (Tier 1)",
    "worker: Worker tests, needs dist/pyright_worker.js (Tier 2)",
    "lsp: Full LSP integration, needs LSP bridge (Tier 3)",
    "slow: Tests that take >10s to complete",
]
testpaths = ["tests"]

# ###################################################################
# pyright options for MicroPython
# ###################################################################
[tool.pyright]
# places to check
include = ["src"]
extraPaths = ["src/lib"]
# how to check
typeCheckingMode = "standard"
pythonPlatform = "Linux"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "information"
reportOptionalCall = "information"
# what to use 
stubPath = "typings"
typeshedPath = "typings"
# things not to check
ignore = ["**/typings"]
exclude = [
    ".*", 
    "__*", 
    "**/typings"
]